# dbt-ynab

./: .env.example  .envrc  .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
etc/: sitecustomize.py
macros/: tx_cols.sql  ynab_api.sql
macros/logic/: ynab_api.sql
macros/utils/: case.sql  cast.sql  date_part.sql  date_trunc.sql  dateadd.sql  least.sql  lit.sql
models/: accounts.sql  balance_forecasts.sql  txs.sql  txs_cc_payments.sql  txs_initial_balance.sql  txs_scheduled.sql
models/output/: accounts.sql
models/staging/: stg_accounts.sql  stg_categories_now.sql  stg_scheduled_transactions.sql
sources/: ynab_api.yml
