[tool.poetry]
name = "dbt-ynab"
version = "0.1.0"
description = "dbt models for analysis of YNAB budget data"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.6"
dbt-duckdb = "^1.8.3"
fsspec = {git = "https://github.com/vergenzt/filesystem_spec", rev = "vergenzt/add-http-protocols", extras = ["http"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
