[tool.poetry]
name = "dbt-ynab"
version = "0.1.0"
description = "dbt models for analysis of YNAB budget data"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.6"
dbt-duckdb = {git = "https://github.com/vergenzt/dbt-duckdb", rev = "vergenzt/fix-version-check"}
fsspec = {path = "../filesystem_spec", extras = ["http"], develop = true}
duckdb = {path = "../duckdb/tools/pythonpkg", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
