[tool.poetry]
name = "dbt-ynab"
version = "0.1.0"
description = "dbt models for analysis of YNAB budget data"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = {path = "../dbt-core/core", develop = true}
dbt-sqlite = {path = "../dbt-sqlite", develop = true}
dbt-shillelagh = {path = "../dbt-shillelagh", develop = true}
shillelagh = {git = "https://github.com/vergenzt/shillelagh", rev = "vergenzt/add-request-headers-by-origin", extras = ["genericjsonapi"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
